update to support spring boot 3